# project_start

./: .gitignore  Dockerfile  Makefile  README.md  cli.py  cookiecutter.json  cookiecutter.json.example  project_start.sh  requirements-dev.txt  setup.py
docs/source/: conf.py
project/config/: version.py
{{ cookiecutter.project_name }}/: .dockerignore  .flake8  .gitignore  LICENCE-PRIVATE  LICENCE-SHARE  Makefile  README.md  __main__.py  cli.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  sonar-project.properties
{{ cookiecutter.project_name }}/app/: __main__.py  create_app.py
{{ cookiecutter.project_name }}/app/api/crud/: crud.py
{{ cookiecutter.project_name }}/app/api/db/: base_class.py  create_db_values.py  init_db.py
{{ cookiecutter.project_name }}/app/api/mappers/: example.py
{{ cookiecutter.project_name }}/app/api/models/: example.py
{{ cookiecutter.project_name }}/app/config/: firebase.py  parseargs.py  settings.py  version.py
{{ cookiecutter.project_name }}/app/metrics/: __init__.py  prometeus.py
{{ cookiecutter.project_name }}/app/middleware/: __init__.py  firebase_auth.py  prometeus_metrics.py  trace_request_id.py
{{ cookiecutter.project_name }}/config/: logger.py  parseargs.py  settings.py  version.py
{{ cookiecutter.project_name }}/config-files/: config.json-exemple  firebase-config.json-exemple  logstash.conf-example  prometeus.yml-exemple
{{ cookiecutter.project_name }}/docs/: CODE_OF_CONDUCT.md  HOW_TO_CONTRIBUTE.md  STYLE_GUIDE.md
{{ cookiecutter.project_name }}/docs/source/: conf.py  index.rst
(+7 files in other folders)
