[tool.poetry]
name = "{{ cookiecutter.project_name }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.project_description }}"
authors = ["{{ cookiecutter.author }} <{{ cookiecutter.email }}>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/{{ cookiecutter.repo_name }}/{{ cookiecutter.project_name }}"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "^0.111.0"
sqlmodel = "^0.0.19"
httpx = "^0.27.0"
icecream = "^2.1.3"
fastapi-pagination = "^0.12.25"
prometheus-client = "^0.20.0"

[tool.poetry.scripts]
app = "app.__main__:main"

[tool.poetry.group.dev.dependencies]
sphinx = "^7.3.7"
pyinstaller = "^6.8.0"
pipx = "^1.6.0"
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
flake8 = "^7.0.0"
black = "^24.4.2"
pytest-cov = "^5.0.0"
pytest-xdist = "^3.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
